--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <span class="accent">Web</span>Studio
                 </a>
                 <ul class="header-list list">
-                    <li class="header-item"> <a class="header-link link" href="./index.html">Студія</a></li>
+                    <li class="header-item"> <a class="header-link link active" href="./index.html">Студія</a></li>
                     <li class="header-item"> <a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
                     <li class="header-item"> <a class="header-link link" href="">Контакти</a></li>
                 </ul>
