--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,8 @@
                 </a>
                 <ul class="header-list list">
                     <li class="header-item"> <a class="header-link link" href="./index.html">Студія</a></li>
-                    <li class="header-item"> <a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
+                    <li class="header-item"> <a class="header-link link active" href="./portfolio.html">Портфоліо</a>
+                    </li>
                     <li class="header-item"> <a class="header-link link" href="">Контакти</a></li>
                 </ul>
             </nav>
