--- a/index.html
+++ b/index.html
@@ -102,26 +102,34 @@
                     <li class="team-member">
                         <img src="./images/img-prod-design.jpg" alt="Фото продакт-дизайнера Ігоря Дем'яненка"
                             width="270" height="260">
-                        <h3 class="team-member-name">Ігор Дем'яненко</h3>
-                        <p class="team-member-jobtitle" lang="en">Product Designer</p>
+                        <div class="team-info">
+                            <h3 class="team-member-name">Ігор Дем'яненко</h3>
+                            <p class="team-member-jobtitle" lang="en">Product Designer</p>
+                        </div>
                     </li class="team-member">
                     <li class="team-member">
                         <img src="./images/img-front-develop.jpg" alt="Фото фронтенд-розробника Ольги Рєпіної"
                             width="270" height="260">
-                        <h3 class="team-member-name">Ольга Рєпіна</h3>
-                        <p class="team-member-jobtitle" lang="en">Frontend Developer</p>
+                        <div class="team-info">
+                            <h3 class="team-member-name">Ольга Рєпіна</h3>
+                            <p class="team-member-jobtitle" lang="en">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-member">
                         <img src="./images/img-marketing.jpg" alt="Фото маркетолог Миколи Тарасова" width="270"
                             height="260">
-                        <h3 class="team-member-name">Микола Тарасов</h3>
-                        <p class="team-member-jobtitle" lang="en">Marketing</p>
+                        <div class="team-info">
+                            <h3 class="team-member-name">Микола Тарасов</h3>
+                            <p class="team-member-jobtitle" lang="en">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-member">
                         <img src="./images/img-ui-design.jpg"
                             alt="Фото дизайнера інтерфейсу користувача Михайла Єрмакова" width="270" height="260">
-                        <h3 class="team-member-name">Михайло Єрмаков</h3>
-                        <p class="team-member-jobtitle" lang="en">UI Designer</p>
+                        <div class="team-info">
+                            <h3 class="team-member-name">Михайло Єрмаков</h3>
+                            <p class="team-member-jobtitle" lang="en">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
