--- a/portfolio.html
+++ b/portfolio.html
@@ -56,54 +56,74 @@
                 <ul class="portfolio-examples list">
                     <li class="portfolio-example-item">
                         <img src="./images/technokryak.jpg" alt="Фото веб-сайту Технокряк" width="370" height="294">
-                        <h3 class="portfolio-examples-title">Технокряк</h3>
-                        <p class="portfolio-category-name">Веб-сайт</p>
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-examples-title">Технокряк</h3>
+                            <p class="portfolio-category-name">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="portfolio-example-item">
                         <img src="./images/poster.jpg" alt="Фото дизайну постера New Orlean та Golden Star " width="370"
                             height="294">
-                        <h3 class="portfolio-examples-title">Постер <span lang="en"> New Orlean vs Golden Star</span>
-                        </h3>
-                        <p class="portfolio-category-name">Дизайн</p>
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-examples-title">Постер <span lang="en"> New Orlean vs Golden
+                                    Star</span>
+                            </h3>
+                            <p class="portfolio-category-name">Дизайн</p>
+                        </div>
                     </li>
                     <li class="portfolio-example-item">
                         <img src="./images//restaurant.jpg" alt="Фото додатка ресторана Seafood" width="370"
                             height="294">
-                        <h3 class="portfolio-examples-title">Ресторан <span lang="en"> Seafood </span></h3>
-                        <p class="portfolio-category-name">Додаток</p>
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-examples-title">Ресторан <span lang="en"> Seafood </span></h3>
+                            <p class="portfolio-category-name">Додаток</p>
+                        </div>
                     </li>
                     <li class="portfolio-example-item">
                         <img src="./images/projectprime.jpg" alt="Фото маркетинга проєкту Prime" width="370"
                             height="294">
-                        <h3 class="portfolio-examples-title">Проєкт <span lang="en"> Prime</span></h3>
-                        <p class="portfolio-category-name">Маркетингr</p>
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-examples-title">Проєкт <span lang="en"> Prime</span></h3>
+                            <p class="portfolio-category-name">Маркетингr</p>
+                        </div>
                     </li>
                     <li class="portfolio-example-item">
                         <img src="./images/projectboxes.jpg" alt="Фото додатка проєкта Boxes" width="370" height="294">
-                        <h3 class="portfolio-examples-title">Проєкт <span lang="en"> Boxes</span></h3>
-                        <p class="portfolio-category-name">Додаток</p>
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-examples-title">Проєкт <span lang="en"> Boxes</span></h3>
+                            <p class="portfolio-category-name">Додаток</p>
+                        </div>
                     </li>
                     <li class="portfolio-example-item">
                         <img src="./images/inspiration.jpg" alt="Фото веб-сайту Inspiration has no Borders" width="370"
                             height="294">
-                        <h3 class="portfolio-examples-title"> <span lang="en"> Inspiration has no Borders </span></h3>
-                        <p class="portfolio-category-name">Веб-сайт</p>
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-examples-title"> <span lang="en"> Inspiration has no Borders </span>
+                            </h3>
+                            <p class="portfolio-category-name">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="portfolio-example-item">
                         <img src="./images/edition.jpg" alt="Фото дизайну видання Limited Edition" width="370"
                             height="294">
-                        <h3 class="portfolio-examples-title">Видання <span lang="en"> Limited Edition </span></h3>
-                        <p class="portfolio-category-name">Дизайн</p>
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-examples-title">Видання <span lang="en"> Limited Edition </span></h3>
+                            <p class="portfolio-category-name">Дизайн</p>
+                        </div>
                     </li>
                     <li class="portfolio-example-item">
                         <img src="./images/projectlab.jpg" alt="Фото маркетинга проєкта LAB" width="370" height="294">
-                        <h3 class="portfolio-examples-title">Проєкт <span lang="en"> LAB </span></h3>
-                        <p class="portfolio-category-name">Маркетинг</p>
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-examples-title">Проєкт <span lang="en"> LAB </span></h3>
+                            <p class="portfolio-category-name">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="portfolio-example-item">
                         <img src="./images/business.jpg" alt="Фото додатка Growing Business" width="370" height="294">
-                        <h3 class="portfolio-examples-title"> <span lang="en"> Growing Business </span></h3>
-                        <p class="portfolio-category-name">Додаток</p>
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-examples-title"> <span lang="en"> Growing Business </span></h3>
+                            <p class="portfolio-category-name">Додаток</p>
+                        </div>
                     </li>
                 </ul>
             </div>
